<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--

    Copyright © 2020-2024 ForgeRock AS (obst@forgerock.com)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.forgerock.sapi.gateway</groupId>
        <artifactId>secure-api-gateway-parent</artifactId>
        <version>4.0.1-SNAPSHOT</version>
    </parent>
    <groupId>com.forgerock.sapi.gateway</groupId>
    <artifactId>secure-api-gateway-ob-uk-common</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>Secure API Gateway common and shared libraries for Open Banking UK specs</name>
    <url>https://github.com/SecureApiGateway/secure-api-gateway-ob-uk-common</url>
    <modules>
        <module>secure-api-gateway-ob-uk-common-bom</module>
        <module>secure-api-gateway-ob-uk-common-shared</module>
        <module>secure-api-gateway-ob-uk-common-obie-datamodel</module>
        <module>secure-api-gateway-ob-uk-common-datamodel</module>
        <module>secure-api-gateway-ob-uk-common-error</module>
    </modules>
    <scm>
        <connection>scm:git:${project.scm.url}</connection>
        <developerConnection>scm:git:${project.scm.url}</developerConnection>
        <url>https://github.com/SecureApiGateway/secure-api-gateway-ob-uk-common.git</url>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <!-- Third Party versions -->
        <java.version>17</java.version>
        <!-- Plugin versions -->
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
        <!-- Artifact versions -->
        <revision>4.0.1-SNAPSHOT</revision>
    </properties>
    <repositories>
        <repository>
            <id>maven.forgerock.org-community</id>
            <name>maven.forgerock.org-releases</name>
            <url>https://maven.forgerock.org/artifactory/community</url>
        </repository>
        <repository>
            <id>maven.forgerock.org-community-snapshots</id>
            <name>maven.forgerock.org-snapshots</name>
            <url>https://maven.forgerock.org/artifactory/community</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo1.maven.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
